[project]
name = "graph-slam"
version = "0.1.0"
description = "An implementation of Factor Graph SLAM backend algorithm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "scipy>=1.15.2",
]
